--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "CLI quiz to guess the names of skateboard flip tricks which are in an animated ascii format",
   "main": "./dist/main.js",
-  "type": "module",
   "scripts": {
     "dev": "concurrently  \"tsc --watch\" \" nodemon ./dist/main.js\"",
     "build": "tsc",
@@ -25,5 +24,10 @@
     "concurrently": "^8.2.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@inquirer/prompts": "^3.1.2",
+    "chalk": "^5.3.0",
+    "chalk-animation": "^2.0.3"
   }
 }
