--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "concurrently  \"tsc --watch\" \" nodemon ./dist/main.js\"",
     "build": "tsc",
     "start": "node ./dist/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts ."
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,14 @@
     "@types/inquirer": "^9.0.3",
     "@types/keypress": "^2.0.30",
     "@types/node": "^20.8.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "concurrently": "^8.2.1",
+    "eslint": "^8.50.0",
+    "eslint-config-standard-with-typescript": "^39.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
   },
