--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "tsc",
         "start": "node ./dist/main.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "lint": "eslint --ignore-path .eslintignore --ext . ; prettier --ignore-path .gitignore --write ."
+        "lint": "eslint . --fix && prettier . --write"
     },
     "repository": {
         "type": "git",
