--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "build": "tsc",
         "start": "node ./dist/main.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "lint": "eslint . --fix && prettier . --write"
+        "lint": "eslint . --fix && prettier . --write",
+        "prepare": "husky install"
     },
     "repository": {
         "type": "git",
@@ -34,6 +35,8 @@
         "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-n": "^16.1.0",
         "eslint-plugin-promise": "^6.1.1",
+        "husky": "^8.0.0",
+        "lint-staged": "^14.0.1",
         "nodemon": "^3.0.1",
         "prettier": "^3.0.3",
         "typescript": "^5.2.2"
