--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev": "concurrently  \"tsc --watch\" \" nodemon ./dist/main.js\"",
         "build": "tsc",
         "start": "node ./dist/main.js",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "lint": "eslint . --fix && prettier . --write",
         "prepare": "husky install"
     },
@@ -42,9 +42,11 @@
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "@types/jest": "^29.5.5",
         "chalk": "^5.3.0",
         "chalk-animation": "^2.0.3",
         "inquirer": "^9.2.11",
-        "keypress": "^0.2.1"
+        "keypress": "^0.2.1",
+        "ts-jest": "^29.1.1"
     }
 }
