--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,11 @@
 {
-    "tabWidth": 4,
-    "useTabs": false,
+    "arrowParens": "always",
+    "bracketSpacing": true,
+    "bracketSameLine": true,
+    "printWidth": 120,
+    "semi": true,
     "singleQuote": true,
-    "trailingComma": "none"
+    "tabWidth": 2,
+    "trailingComma": "all",
+    "useTabs": false
 }
