--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "name": "flip-tricks-ascii",
     "version": "1.0.0",
     "description": "CLI quiz to guess the names of skateboard flip tricks which are in an animated ascii format",
-    "main": "./dist/main.js",
+    "exports": "./dist/main.js",
+    "type": "module",
     "scripts": {
         "dev": "concurrently  \"tsc --watch\" \" nodemon ./dist/main.js\"",
         "build": "tsc",
@@ -22,8 +23,6 @@
     },
     "homepage": "https://github.com/Harrisman05/flip-tricks-ascii#readme",
     "devDependencies": {
-        "@types/inquirer": "^9.0.3",
-        "@types/keypress": "^2.0.30",
         "@types/node": "^20.8.0",
         "@typescript-eslint/eslint-plugin": "^6.7.3",
         "@typescript-eslint/parser": "^6.7.3",
@@ -36,16 +35,16 @@
         "eslint-plugin-promise": "^6.1.1",
         "husky": "^8.0.0",
         "lint-staged": "^14.0.1",
-        "nodemon": "^3.0.1",
         "prettier": "^3.0.3",
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "@inquirer/confirm": "^2.0.14",
+        "@inquirer/prompts": "^3.2.0",
+        "@inquirer/select": "^1.3.0",
+        "@types/inquirer": "^9.0.4",
         "@types/jest": "^29.5.5",
-        "chalk": "^4.1.2",
-        "chalk-animation": "^2.0.3",
-        "inquirer": "^8.2.6",
-        "keypress": "^0.2.1",
+        "ora": "^7.0.1",
         "ts-jest": "^29.1.1"
     }
 }
