--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "@typescript-eslint/no-inferrable-types": "off",
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/no-unused-vars": [ "error", { "argsIgnorePattern": "^_" } ],
+        "@typescript-eslint/explicit-function-return-type": ["error"],
         "curly": "error",
         "eqeqeq": "error",
         "no-irregular-whitespace": "error",
