--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "eslint-plugin-promise": "^6.1.1",
         "husky": "^8.0.0",
         "lint-staged": "^14.0.1",
+        "mock-stdin": "^1.0.0",
         "prettier": "^3.0.3",
         "typescript": "^5.2.2"
     },
