--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "test": "jest",
         "coverage": "jest --coverage",
         "lint": "eslint . --fix && prettier . --write",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "remove-assets": "rm -rf github-export"
     },
     "repository": {
         "type": "git",
@@ -22,6 +23,7 @@
     },
     "homepage": "https://github.com/Harrisman05/flip-tricks-ascii#readme",
     "devDependencies": {
+        "@types/adm-zip": "^0.5.5",
         "@types/inquirer": "^9.0.3",
         "@types/jest": "^29.5.6",
         "@types/node": "^20.8.0",
@@ -37,12 +39,15 @@
         "lint-staged": "^14.0.1",
         "mock-stdin": "^1.0.0",
         "prettier": "^3.0.3",
+        "ts-jest": "^29.1.1",
         "typescript": "^5.2.2"
     },
     "dependencies": {
+        "@octokit/rest": "^20.0.2",
+        "adm-zip": "^0.5.10",
         "chalk": "^4.1.2",
         "chalk-animation": "^2.0.3",
         "inquirer": "^8.2.6",
-        "ts-jest": "^29.1.1"
+        "octokit": "^3.1.2"
     }
 }
